hard-gists/a54e7e182ddf564f6a5c1fe50db556a2/run.log
=== Docker Run Log for a54e7e182ddf564f6a5c1fe50db556a2 ===
Started at: Mi 29. Okt 18:55:39 CET 2025

[2025-10-29 18:55:40] START: Running container for a54e7e182ddf564f6a5c1fe50db556a2
[2025-10-29 18:55:40] SUCCESS: Container 8ee4642ecad31b43a3fb8bcae04625facca1ef9dd3bc03477f53400245860488 started for a54e7e182ddf564f6a5c1fe50db556a2
=== Container logs for a54e7e182ddf564f6a5c1fe50db556a2 ===
  File "/snippet.py", line 7
    print "Topic %d:" % (topic_idx)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a54e7e182ddf564f6a5c1fe50db556a2 ===
[2025-10-29 18:55:42] INFO: Container 8ee4642ecad31b43a3fb8bcae04625facca1ef9dd3bc03477f53400245860488 has stopped
